Fix references on Mobile sarafi.

--- a/source/styles/application.css.scss
+++ b/source/styles/application.css.scss
@@ -299,6 +299,8 @@ body {
     }
 
     #references tr {
+      width: 550px;
+
       td {
         padding-top: 20px;
         padding-bottom: 20px;
